Fix question overflow on QuestionPage

--- a/src/components/Question/QuestionPage.module.scss
+++ b/src/components/Question/QuestionPage.module.scss
@@ -1,6 +1,7 @@
 .container {
   h1 {
     margin: 0 0 12px;
+    overflow-wrap: break-word;
   }
 
   p {
